--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
+  "homepage": "./",
 	"scripts": {
 		"dev": "vite --host",
 		"build": "tsc --noEmit && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
-		"deploy": "gh-pages -d build"
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@react-three/cannon": "^6.6.0",
