--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
-  "homepage": "./",
+	"homepage": "./",
 	"scripts": {
 		"dev": "vite --host",
 		"build": "tsc --noEmit && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
-		"deploy": "gh-pages -d dist"
+		"deploy": "./node_modules/gh-pages/bin/gh-pages-clean.js && gh-pages -d dist"
 	},
 	"dependencies": {
 		"@react-three/cannon": "^6.6.0",
