--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"build": "tsc --noEmit && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
-		"deploy": "./node_modules/gh-pages/bin/gh-pages-clean.js && gh-pages -d dist"
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@react-three/cannon": "^6.6.0",
